--- a/styles/banner.css
+++ b/styles/banner.css
@@ -29,7 +29,22 @@
   font-size: 14px;
   font-weight: 400;
   text-align: center;
-color: var(--branco);
-background: url(../img/Pesquisa.svg) no-repeat;
-background-position: 0.8em;
+  color: var(--branco);
+  background: url(../img/Pesquisa.svg) no-repeat;
+  background-position: 0.8em;
+}
+
+@media screen and (min-width: 1024px) {
+  
+  .banner__titulo {
+    font-size: 36px;
+  }
+
+  .banner__pesquisa {
+    width: 50%;
+  }
+
+  .banner__pesquisa::placeholder {
+    background-image: 7em;
+  }
 }
