--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -88,3 +88,30 @@
 .estrela {
   margin-bottom: 0.5em;
 }
+
+@media screen and (min-width: 1024px) {
+
+  .carrossel__titulo {
+    font-size: 26px;
+  }
+
+  .swiper-pagination {
+    margin: 2em 0 3em 0;
+  }
+
+  .swiper {
+    width: 70%;
+    margin-bottom: 3em;
+  }
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    display: block;
+    top: 60%;
+  }
+
+  .card {
+    width: 50%;
+    margin: 2em auto 3em auto;
+  }
+}
