--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -6,3 +6,12 @@ hr {
   background-color: var(--branco);
   padding: 1em;
 }
+
+@media screen and (min-width: 1024px) {
+
+  .rodape {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+}
