--- a/styles/header.css
+++ b/styles/header.css
@@ -71,6 +71,10 @@
   display: none;
 }
 
+.container__texto {
+  display: none;
+}
+
 @media screen and (min-width: 1024px) {
 
   .container__titulo,
@@ -119,4 +123,27 @@
   .opções__botao {
     /* display: none; */
   }
+}
+
+@media screen and (min-width: 1728px) {
+  
+  .container__link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: var(--preto);
+  }
+
+  .cabecalho {
+    padding: 0 2em;
+  }
+
+  .opções {
+    margin: auto;
+  }
+
+  .container__texto {
+    display: block;
+  }
+  
 }
