--- a/styles/banner.css
+++ b/styles/banner.css
@@ -11,7 +11,7 @@
 }
 
 .banner__texto {
-  font-size: 500;
+  font-size: 500px;
   margin: 1em 0;
 }
 
@@ -30,12 +30,11 @@
   font-weight: 400;
   text-align: center;
   color: var(--branco);
-  background: url(../img/Pesquisa.svg) no-repeat;
+  background: url("../img/Pesquisa.svg") no-repeat;
   background-position: 0.8em;
 }
 
 @media screen and (min-width: 1024px) {
-  
   .banner__titulo {
     font-size: 36px;
   }
@@ -45,6 +44,21 @@
   }
 
   .banner__pesquisa::placeholder {
-    background-image: 7em;
+    background-image: url("../img/Pesquisa.svg");
+    background-position: 7em;
+  }
+}
+
+@media screen and (min-width: 1728px) {
+  .banner__pesquisa {
+    width: 35%;
+  }
+
+  .banner__pesquisa::placeholder {
+    background-position: 12em;
+  }
+
+  .banner {
+    padding: 6em 0;
   }
 }
